# zetic_mlframework

./: .gitignore  README.md
zetic_MLFramework_MNIST/: CMakeLists.txt  build.sh  main.cpp
zetic_MLFramework_MNIST/include/ml_framework/: FullyConnectedLayer.hpp  Layer.hpp  Loss.hpp  MNISTLoader.hpp  NeuralNetwork.hpp  Optimizer.hpp  ReLULayer.hpp  SigmoidLayer.hpp  SoftmaxLayer.hpp
zetic_MLFramework_MNIST/src/: CMakeLists.txt
zetic_MLFramework_MNIST/src/ml_framework/: FullyConnectedLayer.cpp  NeuralNetwork.cpp
zetic_MLFramework_Simple/: README_simple_version.md  build.sh  main.cpp
zetic_MLFramework_Simple/include/ml_framework/: FullyConnectedLayer.hpp  Layer.hpp  Loss.hpp  NeuralNetwork.hpp  Optimizer.hpp  ReLULayer.hpp  SigmoidLayer.hpp
zetic_MLFramework_Simple/src/ml_framework/: FullyConnectedLayer.cpp  NeuralNetwork.cpp
